# ecommerce-fraud-detection

./: .gitignore  Dockerfile  README.md  notebook.ipynb  predict.py  pyproject.toml  test.py  train.py
docker/predict/: pyproject.toml
